# clipshow

./: .gitignore  LICENSE  PLAN.md  README.md  pyproject.toml
.beads/: issues.jsonl  metadata.json
.claude/memory/: MEMORY.md
.github/workflows/: ci.yml  release.yml
clipshow/: __init__.py  __main__.py  app.py  config.py  yaml_config.py
clipshow/detection/: audio.py  audio_preprocess.py  audiovisual.py  base.py  emotion.py  models.py  motion.py  pipeline.py  scene.py  scoring.py  semantic.py
clipshow/export/: assembler.py  ffprobe.py
clipshow/model/: moments.py  project.py  signals.py
clipshow/ui/: analyze_panel.py  export_panel.py  import_panel.py  main_window.py  prompt_editor.py  review_panel.py  segment_list.py  settings_dialog.py  video_preview.py
docs/: semantic-improvements-plan.md
packaging/: clipshow_macos.spec  clipshow_windows.spec  com.clipshow.app.desktop  com.clipshow.app.metainfo.xml  com.clipshow.app.yml  download_models.py  installer.iss
scripts/: export_languagebind.py  smoke-test-macos.sh
tests/: conftest.py  test_assembler.py  test_audio_preprocess.py  test_audiovisual_detector.py  test_audiovisual_e2e.py  test_auto_mode.py  test_detectors.py  test_e2e_real_videos.py  test_emotion_detector.py  test_ffprobe.py  test_model_manager.py  test_pipeline.py  test_prompt_editor.py  test_scoring.py  test_semantic_detector.py  test_settings_dialog.py  test_ui_analyze.py  test_ui_export.py  test_ui_import.py  test_ui_layout.py  test_ui_review.py  test_ui_workflow.py  test_video_preview.py  test_visual_regression.py  test_yaml_config.py
(+5 files in other folders)
